# panelarr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cspell.json  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml
backend/: config.py  main.py
backend/routers/: arr.py  auth.py  calendar.py  config.py  containers.py  downloads.py  logs.py  media.py  notifications.py  setup.py  system.py
backend/services/: arr.py  auth.py  auth_config.py  calendar.py  config.py  discover.py  docker.py  media.py  notifications.py  registry.py
backend/tests/: test_auth_config.py  test_calendar.py  test_discover.py
docs/: configuration.md
frontend/: components.json  index.html  knip.json  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx  router.jsx
frontend/src/components/: auth-section.jsx  calendar-agenda-row.jsx  disk-selector.jsx  error-boundary.jsx  layout.jsx  logo.jsx  logo.test.jsx  secret-input.jsx  service-section.jsx  wizard-layout.jsx
frontend/src/hooks/: use-api.js  use-auth.jsx  use-media-query.js  use-setup-status.js  use-setup.jsx  use-theme.jsx  use-update.js  use-websocket.js
frontend/src/lib/: api.js  query-client.js  utils.js  utils.test.js
frontend/src/pages/: calendar.jsx  containers.jsx  dashboard.jsx  downloads.jsx  login.jsx  movie-detail.jsx  movies.jsx  settings.jsx  show-detail.jsx  (+1 more)
(+19 files in other folders)
