[project]
name = "panelarr"
version = "0.1.0-alpha"
description = "Self-hosted control center for Docker-based media server stacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "thug-drama" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "websockets>=13,<15",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "psutil>=5,<7",
    "PyJWT>=2,<3",
    "bcrypt>=4,<5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
